loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:10: error: illegal start of simple expression
    }
    ^Poucet2:11: error: 'while' expected but 'if' found.
    if(baggle<=2){
    ^Poucet2:14: error: '(' expected but ';' found.
    if(baggle>=3){
^